# git-rewrite-commits

./: .gitignore  AGMENT.md  GUIDE_EXTERNAL_REPO.md  README.md  TEST.txt  action.yml  pyproject.toml
.github/workflows/: remote-rewrite.yml  rewrite-commits.yml  rewrite-local.yml  rewrite-remote.yml
src/git_rewrite_commits/: __init__.py  __main__.py  cli.py  git.py  prompts.py  quality.py  redaction.py  rewriter.py
src/git_rewrite_commits/hooks/: __init__.py  templates.py
src/git_rewrite_commits/providers/: __init__.py  base.py  deepseek.py  ollama.py  openai.py
tests/: test_quality.py
