[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git-rewrite-commits"
version = "1.0.0"
description = "AI-powered git commit message rewriter using OpenAI, DeepSeek, or Ollama"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "git-rewrite-commits contributors" }
]
keywords = [
    "git",
    "commit",
    "conventional-commits",
    "openai",
    "deepseek",
    "ollama",
    "ai",
    "rewrite",
    "history",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.25",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
git-rewrite-commits = "git_rewrite_commits.cli:main"
grec = "git_rewrite_commits.cli:main"

[project.urls]
Homepage = "https://github.com/f/git-rewrite-commits"
Repository = "https://github.com/f/git-rewrite-commits"
Issues = "https://github.com/f/git-rewrite-commits/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/git_rewrite_commits"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
